# knewbit-max

./: .gitignore  README.md
.github/workflows/: prod.yaml
backend/: README.md  course.py  dockerfile  main.py  pyproject.toml  requirements.txt  test_api.py  video_process.py
frontend/: README.md  dockerfile  package-lock.json  package.json  test-setup.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthModal.tsx  ChatInterface.tsx  CourseDisplay.tsx  CourseFlashcards.tsx  CoursePage.tsx  CourseQuiz.tsx  CourseRecommendations.tsx  CourseSidebar.tsx  CourseSummary.tsx  CourseSummaryContent.tsx  CourseTabNavigation.tsx  Flashcards.tsx  LanguageSelector.tsx  MagicalLoader.tsx  Quiz.tsx  Sidebar.tsx  TabNavigation.tsx  UserProfile.tsx  VideoSection.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/data/: loadingStages.ts  mockCourse.ts
frontend/src/lib/: api.ts
frontend/src/types/: auth.ts  course.ts  language.ts
